<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="movie"
            type="data.Movie" />
    </data>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailActivity"
    tools:showIn="@layout/activity_detail">

    <ImageView
        android:id="@+id/activity_detail_image_id"
        tools:src="http://image.tmdb.org/t/p/w500/to0spRl1CMDvyUbOnbb4fTk3VAd.jpg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="116dp"
        android:backgroundTint="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/activity_detail_movie_title"
        android:text="@{movie.get_title()}"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="68dp"
        android:textSize="@dimen/title_font_sizes"
        app:layout_constraintBottom_toTopOf="@+id/activity_detail_image_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/movie_title" />

    <TextView
        android:id="@+id/activity_detail_movie_description"
        android:textSize="@dimen/non_title_font_sizes"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plot_syn_title" />

    <TextView
        android:id="@+id/plot_syn_title"
        android:layout_width="101dp"
        android:layout_height="23dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:text="@string/plot_syn_title"
        android:textSize="@dimen/non_title_font_sizes"
        app:layout_constraintEnd_toEndOf="@+id/activity_detail_image_id"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/activity_detail_image_id"
        app:layout_constraintTop_toBottomOf="@+id/activity_detail_image_id" />

    <TextView
        tools:text="@string/releaseDate"
        android:textSize="@dimen/non_title_font_sizes"
        android:id="@+id/releaseDate"
        android:layout_width="86dp"
        android:layout_height="18dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="116dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/activity_detail_image_id"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/runtime"
        android:textSize="@dimen/non_title_font_sizes"
        tools:text="@string/runtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@+id/releaseDate"
        app:layout_constraintStart_toStartOf="@+id/releaseDate"
        app:layout_constraintTop_toBottomOf="@+id/releaseDate" />

    <TextView
        android:id="@+id/voteAverage"
        android:textSize="@dimen/non_title_font_sizes"
        tools:text="@string/vote_average"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/runtime"
        app:layout_constraintHorizontal_bias="0.562"
        app:layout_constraintStart_toStartOf="@+id/runtime"
        app:layout_constraintTop_toBottomOf="@+id/runtime" />
</android.support.constraint.ConstraintLayout>
</layout>